Replaced API calls with config files respectively templates; #142